--- a/game/Layouts/Title Screen.xml
+++ b/game/Layouts/Title Screen.xml
@@ -29,7 +29,7 @@
             <blend-mode>0</blend-mode>
             <effect-fallback>0</effect-fallback>
             <instances>
-                <instance type="Sprite20" uid="122">
+                <instance type="TitleScreen" uid="122">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
